2016-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (parse8BIM): Fix unsigned underflow leading to
	heap overflow when parsing 8BIM chunk.  Problem was reported by
	Marco Grassi via email on October 1, 2016.  Problem was already
	known (but not fixed) based on comments in the code.

2016-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c: Improve the robustness of the XCF reader by adding
	more error checking.

2016-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (RLEConstrainColormapIndex): Was not constraining
	colormap index like it should be.  This problem was added on
	2016-09-23.

	* www/thanks.rst: Added Moshe Kaplan to Thanks.

	* www/Hg.rst: Mercurial URL fixes.  Patch from Mark Mitchell.

	* www/programming.rst: Updated programming APIs page.

2016-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Trace ExtendCache() failures.

2016-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Fix unexpectedly large memory
	allocation with corrupt SGI file provided via email by Agostino
	Sarubbo on September 15, 2016.

	* coders/rle.c (ReadRLEImage): Only report an invalid colormap
	index once.  Fixes slowness problem with corrupt file provided via
	email by Agostino Sarubbo on September 15, 2016.

2016-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/thanks.rst: Added a 'thanks' page.

2016-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/MANIFEST: Fix content of PerlMagick MANIFEST.

2016-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Check that filesize is reasonable
	given header.  Fixes excessive memory allocation followed by
	eventual file truncation error for corrupt file.  Problem was
	reported via email by Agostino Sarubbo on 2016-09-10.

	* coders/sgi.c (ReadSGIImage): Check that filesize is reasonable