@@ -1,3 +1,7 @@
+2016-10-02  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/wpg.c Add sanity check for palette.
+
 2016-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/meta.c (parse8BIM): Fix unsigned underflow leading to
